--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 .idea
+dist/
+.astro/
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.env
+.env.production
+.DS_Store
