--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.32.3",
     "astro": "^5.1.5",
+    "chart.js": "^4.4.1",
     "sharp": "^0.32.5"
   }
 }
