new bench article

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,12 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+          fetch-depth: 0
+          clean: true
+      - name: Clear npm cache
+        run: npm cache clean --force
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         # with:
